[project]
name = "bitmcp"
version = "1.0.0"
description = "In-house Bitbucket MCP Server — read, review, and collaborate via AI"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
bitmcp = "bitmcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bitmcp"]
